[gd_scene load_steps=9 format=3 uid="uid://x1okndp2kjsm"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_eano5"]
[ext_resource type="PackedScene" uid="uid://f6t1ah14fnjm" path="res://Scenes/Entities/bullet.tscn" id="2_1bxc2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x8agp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1dvun"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_babaq"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7o05y"]
material = SubResource("StandardMaterial3D_babaq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8aoh0"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_27u18"]
material = SubResource("StandardMaterial3D_8aoh0")

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_eano5")
player_bullet = ExtResource("2_1bxc2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_x8agp")

[node name="Body" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
mesh = SubResource("CapsuleMesh_1dvun")
skeleton = NodePath("../../CollisionShape3D")

[node name="Eyes" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.648801, 0, 0, 0, 0.259154, 0, 0, 0, 0.438841, 0, 0.46592, -0.288339)
mesh = SubResource("BoxMesh_7o05y")
skeleton = NodePath("../..")

[node name="Gun" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.244727, 0, 0, 0, 0.218971, 0, 0, 0, 1, 0.215444, 0, -0.575895)
mesh = SubResource("BoxMesh_27u18")
skeleton = NodePath("../..")

[node name="Muzzle" type="Marker3D" parent="Body"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.220944, 0.00486779, -1.19007)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
